<resources>
    <string name="app_name">Vidyacademy</string>
    <string name="server_url">http://api.medd.in</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gender_spinner_title">gender_login_prompt</string>
    <string name="name">Name</string>
    <string name="prompt">Available Lab(s)</string>
    <string name="Phone">Phone</string>
    <string name="activity_detailed_result_radio">Detailed Results Radio</string>
    <string name="title_activity_upload">Upload</string>

    <string name="title_activity_image_preview">Image preview</string>

    <string name="title_activity_registration">Registration</string>
<string name="about">Medd is a platform that caters to all your medical diagnostic needs. You can book your tests and procedures from the app at the best labs and hospitals.
\n
Additionally, you can also avail:

    \n
1. Home collection of sample
\n
2. e-Reports - your medical reports on your phone
\n
3. Tailored health checkup packages to screen your body before disease strikes
\n
4. Discounts: amazing deals on packages and individual tests</string>
    <string name="title_activity_search_tests">SearchTests</string>

    <string name="radiology">Radiology</string>
    <string name="past"><u>YOUR PAST REPORTS</u></string>
    <string name="pathology">Pathology</string>

    <string name="search">Search</string>

    <string name="gimmehealth">Gimme health!</string>

    <string name="title_activity_search_results">SearchResults</string>

    <string name="title_activity_payment">Payment</string>

    <string name="loggedinPerson">Its me! Why u ask</string>

    <string name="checkout">To health!</string>

    <string name="firstNameCheckout">First Name</string>

    <string name="lastNameCheckout">Last Name</string>

    <string name="mobileCheckout">Mobile</string>

    <string name="addressCheckout">Address</string>

    <string name="dateOfBirth">DOB</string>

    <string name="noLater">noLater</string>

    <string name="register">register</string>

    <string name="address">address</string>

    <string name="mobile">mobile</string>

    <string name="email">email</string>

    <string name="lastName">lastName</string>

    <string name="firstName">firstName</string>

    <string name="go">Go</string>
    <string name="moreButton">&#xf1ea; Read More</string>
    <string name="shareButton">&#xf064; Share</string>
    <string name="lastNamelogin">Last Name</string>

    <string name="title_activity_verify_phone">VerifyPhone</string>

    <string name="title_activity_main">Vidyacademy</string>

    <string name="Search_tests_page">searchtestspage</string>

    <string name="MyAccount">myaccount</string>

    <string name="title_activity_my_account">MyAccount</string>

    <string name="title_activity_home_pickup">HomePickupActivity</string>

    <string name="title_activity_accounts_list">AccountsList</string>

    <string name="addAdress">Add Address</string>

    <string name="enable_gps">Enable location services to discover labs closest to you </string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>How it works</item>
        <item>FAQ</item>
        <item>Contact Us</item>
        <item>Share</item>
        <item>Rate Us</item>
        <item>About Us</item>
        <item>Logout</item>


    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <string-array name="nav_drawer_icons">
        <item>&#xf015;</item>
        <item>&#xf013;</item>
        <item>&#xf059;</item>
        <item>&#xf098;</item>
        <item>&#xf1e0;</item>
        <item>&#xf005;</item>
        <item>&#xf05a;</item>
        <item>&#xf011;</item>
    </string-array>

    <!-- icon used inside ehr_listrow.xml-->
    <string name="profileFontAwesome">&#xf007;</string>
    <string name="heartbeatFontAwesome">&#xf21e;</string>
    <string name="medkitFontAwesome">&#xf0fa;</string>
    <string name="calenderFontAwesome">&#xf073;</string>
    <string name="expandFontAwesome">&#xf0b2;</string>

    <!-- icon used inside activity_ehrdetails-->
    <string name="doubleDownFontAwesome">&#xf103;</string>

    <!-- icon used inside testgroup_child_expandablelistview.xml-->
    <string name="infoFontAwesome">&#xf05a;</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="Rs">\u20B9</string>
    <string name="PatientName">NAME</string>
    <string name="back">Back</string>
    <string name="with_pathalogy">Pathology</string>
    <string name="shoe_labs">show labs</string>
    <string name="proceed">proceed</string>
    <string name="title_activity_import_first_time">Fetching Tests</string>
    <string name="title_activity_category">Category Search</string>
    <string name="title_activity_prescription_click">Prescription_click</string>
    <string name="title_activity_choice">Choice</string>
    <string name="title_activity_coupon_code">Coupon_code</string>
    <string name="title_activity_detailed_result">Details</string>
    <string name="clear">Clear All</string>
    <string name="buythese">Continue</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="COUPON_CODE_IS">Booking Id:</string>
    <string name="DUE_AMOUNT">AMOUNT DUE</string>
    <string name="referral_heading">Refereal</string>
    <string name="booking_confirmed">Booking confirmed on</string>
    <string name="YOUR_TEST">YOUR TESTS</string>
    <string name="CENTER">CENTER</string>
    <string name="heartbeat">&#xf21e;</string>
    <string name="fa_location">&#xf124;</string>
    <string name="APP_ID">817662598349749</string>
    <string name="Try_Again">Try Again</string>
    <string name="Back">Back</string>
    <string name="noResult">We don\'t provide this test now,but would be available soon.Please go back and search for other tests.</string>
    <string name="title_activity_pharmacy_search">PharmacySearch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detailed_pharmacy">DetailedPharmacy</string>
    <string name="title_activity_image_adapter_tutorial">ImageAdapterTutorial</string>
    <string name="title_activity_tutorial_activity_medd">TutorialActivityMedd</string>
    <string name="title_activity_second_activity_main">Medd</string>
    <string name="title_activity_health_check_up">HealthCheckUp</string>
    <string name="title_activity_deals_details">DealsDetails</string>
    <string name="title_activity_rating">Rating</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_medd_sign_up">MeddSignUp</string>
    <string name="title_activity_previous_fragment">PreviousFragment</string>
    <string name="title_activity_common_pathalogy_fragment">CommonPathalogyFragment</string>
    <string name="title_activity_logout_fragment">logoutFragment</string>
    <string name="title_activity_prescription_confirm">PrescriptionConfirm</string>
    <string name="title_activity_ehr">EHR</string>
    <string name="title_activity_user_information_extended">More Information Please</string>
    <string name="title_activity_ehrdetails">EHRDetails</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_facebook_check">FacebookCheckActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_feedback">Help Us!</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_category_search_radio">CategorySearchRadio</string>
</resources>
