<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/feed_item_margin"
        android:layout_marginRight="@dimen/feed_item_margin"

        android:layout_marginBottom="5dp"
        android:background="@drawable/list_item"
        android:orientation="vertical"
        android:paddingBottom="@dimen/feed_item_padding_top_bottom"
        android:paddingTop="@dimen/feed_item_padding_top_bottom"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        >

    <TextView
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="PHARMACY"
        android:textStyle="bold"
        android:textSize="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:id="@+id/textView_your_option_r" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COUPON_CODE_IS"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:paddingLeft="30dp"
        android:textStyle="bold"
        android:id="@+id/textView_couponCodeIs" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Code"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:textColor="@color/darkblue"
        android:textStyle="bold"
        android:id="@+id/confirmation_coupon_code_r" />
        </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_confirmed"
                android:textSize="15dp"
                android:id="@+id/Booking_Confirmed"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:paddingLeft="20dp"
                android:fontFamily="sans"
                android:text="Day and Date"
                android:id="@+id/book_date_r"
                android:textColor="@color/black"
                android:layout_weight="1"/>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="120dp"

            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="14sp"
            android:layout_marginTop="2dip"
            android:ellipsize="end"
            android:singleLine="false"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/PatientName"

            android:id="@+id/textView_patientname_r" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient's name"
            android:textColor="@color/black"
            android:typeface="sans"
            android:textSize="14sp"
            android:layout_marginTop="2dip"
            android:ellipsize="end"
            android:singleLine="false"
            android:textStyle="normal"

            android:id="@+id/confirmation_patient_name_r" />
    </LinearLayout>


    <LinearLayout
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pasttestslayout"
        >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="bold"
                android:text="YOUR TEST"
                android:id="@+id/textView_your_test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test names"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="normal"
                android:id="@+id/confirmation_test_names_r" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="120dp"

                android:layout_height="wrap_content"
                android:text="@string/CENTER"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="bold"
                android:id="@+id/textView_center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Center name"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="normal"
                android:id="@+id/confirmation_centre_name_r" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="address"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="normal"
                android:id="@+id/confirmation_centre_address_r" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="PAYMENT"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="bold"
                android:id="@+id/textView_due_amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textColor="@color/black"
                android:typeface="sans"
                android:textSize="14sp"
                android:layout_marginTop="2dip"
                android:ellipsize="end"
                android:singleLine="false"
                android:textStyle="normal"
                android:id="@+id/amount_r" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bookhealth"
                    android:layout_width="60dip"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentRight="true"
                    android:text="BOOK"

                    android:textColor="@color/white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@color/darkblue"
                    android:visibility="gone"
                    />
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ibcallpast"
                    android:src="@drawable/phoneicon"
                    android:scaleType="fitStart"

                    android:background="#ffffff"
                    android:layout_below="@+id/bookhealth"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
